// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BreakpointProvider default 1`] = `
.c1 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c0 {
  background: #eee;
  padding: 24px;
}

<div>
  <div
    className="c0"
  >
    <p
      className="c1"
    >
      Current breakpoint is 
      large
    </p>
  </div>
</div>
`;

exports[`Storyshots Button Destructive 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: 0 6px 3px -5px rgba(51,55,64 ,.3);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  background-color: #ed2157;
  border-radius: 0;
  border: solid 1px #ed2157;
  color: #fff;
}

.c0:hover {
  background-color: #ed2157;
  border-color: #ed2157;
  color: #fff;
}

.c0:focus {
  background-color: #ed2157;
  border-color: #ed2157;
  color: #fff;
}

.c0:active {
  background-color: #ed2157;
  border-color: #ed2157;
  color: #fff;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:active {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

.c0:focus {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:disabled {
  background: #edeff2 repeating-linear-gradient( -45deg, #dbdfe6, #dbdfe6 20px, transparent 20px, transparent 40px );
  border: 0;
  padding: 12px 36px;
  box-shadow: none;
  cursor: default;
  opacity: .7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #333740;
}

<button
  className="c0"
  disabled={undefined}
  href={undefined}
  onClick={[Function]}
  target={undefined}
  title="Click me!"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Disabled 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: 0 6px 3px -5px rgba(51,55,64 ,.3);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  background-color: #5bd16a;
  border-radius: 0;
  border: solid 1px #5bd16a;
  color: #fff;
}

.c0:hover {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:focus {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:active {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:active {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

.c0:focus {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:disabled {
  background: #edeff2 repeating-linear-gradient( -45deg, #dbdfe6, #dbdfe6 20px, transparent 20px, transparent 40px );
  border: 0;
  padding: 12px 36px;
  box-shadow: none;
  cursor: default;
  opacity: .7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #333740;
}

<button
  className="c0"
  disabled={true}
  href={undefined}
  onClick={[Function]}
  target={undefined}
  title="Click me if you can!"
  type="button"
>
  Click me if you can!
</button>
`;

exports[`Storyshots Button Primary 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: 0 6px 3px -5px rgba(51,55,64 ,.3);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  background-color: #5bd16a;
  border-radius: 0;
  border: solid 1px #5bd16a;
  color: #fff;
}

.c0:hover {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:focus {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:active {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:active {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

.c0:focus {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:disabled {
  background: #edeff2 repeating-linear-gradient( -45deg, #dbdfe6, #dbdfe6 20px, transparent 20px, transparent 40px );
  border: 0;
  padding: 12px 36px;
  box-shadow: none;
  cursor: default;
  opacity: .7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #333740;
}

<button
  className="c0"
  disabled={undefined}
  href={undefined}
  onClick={[Function]}
  target={undefined}
  title="Click me!"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: 0 6px 3px -5px rgba(51,55,64 ,.3);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  background-color: #edeff2;
  border-radius: 0;
  border: solid 1px #d2d7e0;
  color: #333740;
}

.c0:hover {
  background-color: #edeff2;
  border-color: #d2d7e0;
  color: #333740;
}

.c0:focus {
  background-color: #edeff2;
  border-color: #d2d7e0;
  color: #333740;
}

.c0:active {
  background-color: #edeff2;
  border-color: #d2d7e0;
  color: #333740;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:active {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

.c0:focus {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:disabled {
  background: #edeff2 repeating-linear-gradient( -45deg, #dbdfe6, #dbdfe6 20px, transparent 20px, transparent 40px );
  border: 0;
  padding: 12px 36px;
  box-shadow: none;
  cursor: default;
  opacity: .7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #333740;
}

<button
  className="c0"
  disabled={undefined}
  href={undefined}
  onClick={[Function]}
  target={undefined}
  title="Click me!"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Warning 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: 0 6px 3px -5px rgba(51,55,64 ,.3);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  background-color: #fcc200;
  border-radius: 0;
  border: solid 1px #fcc200;
  color: #fff;
}

.c0:hover {
  background-color: #fcc200;
  border-color: #fcc200;
  color: #fff;
}

.c0:focus {
  background-color: #fcc200;
  border-color: #fcc200;
  color: #fff;
}

.c0:active {
  background-color: #fcc200;
  border-color: #fcc200;
  color: #fff;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:active {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

.c0:focus {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:disabled {
  background: #edeff2 repeating-linear-gradient( -45deg, #dbdfe6, #dbdfe6 20px, transparent 20px, transparent 40px );
  border: 0;
  padding: 12px 36px;
  box-shadow: none;
  cursor: default;
  opacity: .7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #333740;
}

<button
  className="c0"
  disabled={undefined}
  href={undefined}
  onClick={[Function]}
  target={undefined}
  title="Click me!"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button With a link 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: 0 6px 3px -5px rgba(51,55,64 ,.3);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  background-color: #5bd16a;
  border-radius: 0;
  border: solid 1px #5bd16a;
  color: #fff;
}

.c0:hover {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:focus {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:active {
  background-color: #5bd16a;
  border-color: #5bd16a;
  color: #fff;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:active {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

.c0:focus {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:disabled {
  background: #edeff2 repeating-linear-gradient( -45deg, #dbdfe6, #dbdfe6 20px, transparent 20px, transparent 40px );
  border: 0;
  padding: 12px 36px;
  box-shadow: none;
  cursor: default;
  opacity: .7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #333740;
}

<a
  className="c0"
  disabled={undefined}
  href="http://www.google.nl"
  onClick={[Function]}
  target="_blank"
  title="Click me!"
  type={undefined}
>
  Click me
</a>
`;

exports[`Storyshots ErrorBoundary default 1`] = `
.c0 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<div>
  <p
    className="c0"
  >
    This does not have an error.
  </p>
</div>
`;

exports[`Storyshots FlatButton default 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: none;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  background: transparent;
  border-radius: 0;
  border: solid 1px transparent;
  color: #21252b;
}

.c0:hover {
  background-color: transparent;
  border-color: #d2d7e0;
  color: #21252b;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:focus {
  background-color: transparent;
  border-color: #d2d7e0;
  color: #21252b;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c0:active {
  background-color: transparent;
  border-color: #d2d7e0;
  color: #21252b;
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

<button
  className="c0"
  disabled={false}
  href={undefined}
  onClick={[Function]}
  target={undefined}
  title="Click me!"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots FoldOut With a toggle 1`] = `
.c2 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  line-height: 1;
  padding: 11px 35px;
  box-shadow: 0 6px 3px -5px rgba(51,55,64 ,.3);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-transform: translateZ(0) translate3d(0,0,0);
  -ms-transform: translateZ(0) translate3d(0,0,0);
  transform: translateZ(0) translate3d(0,0,0);
  -webkit-transition: -webkit-transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  transition: transform 0.1s,background 0.3s,color 0.3s,box-shadow 0.1s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  background-color: #edeff2;
  border-radius: 0;
  border: solid 1px #d2d7e0;
  color: #333740;
}

.c3:hover {
  background-color: #edeff2;
  border-color: #d2d7e0;
  color: #333740;
}

.c3:focus {
  background-color: #edeff2;
  border-color: #d2d7e0;
  color: #333740;
}

.c3:active {
  background-color: #edeff2;
  border-color: #d2d7e0;
  color: #333740;
}

.c3:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c3:active {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 2px 3px -2px rgba(51,55,64 ,.3);
}

.c3:focus {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  box-shadow: 0 9px 3px -6px rgba(51,55,64 ,.3);
}

.c3:disabled {
  background: #edeff2 repeating-linear-gradient( -45deg, #dbdfe6, #dbdfe6 20px, transparent 20px, transparent 40px );
  border: 0;
  padding: 12px 36px;
  box-shadow: none;
  cursor: default;
  opacity: .7;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #333740;
}

.c1 {
  padding: 0px 0px 12px 0px;
}

.c0 {
  -webkit-transition: height 300ms cubic-bezier(0.5,0,0.1,1);
  transition: height 300ms cubic-bezier(0.5,0,0.1,1);
  overflow: hidden;
  height: 0;
}

<div>
  <div
    className="c0"
  >
    <div>
      <div
        className="c1"
      >
        <p
          className="c2"
        >
          
    Now this is the story all about how
    My life got flipped, turned upside down
    And I'd like to take a minute just sit right there
    I'll tell you how I became the prince of a town called Bel-air

    In west Philadelphia born and raised
    On the playground where I spent most of my days
    Chilling out, maxing, relaxing all cool
    And all shooting some b-ball outside of the school
    When a couple of guys, they were up to no good
    Started making trouble in my neighbourhood
    I got in one little fight and my mom got scared
    And said "You're moving with your auntie and uncle in Bel-air"

    I whistled for a cab and when it came near the
    License plate said "fresh" and had a dice in the mirror
    If anything I could say that this cab was rare
    But I thought nah, forget it, yo homes to Bel-air!

    I pulled up to a house about seven or eight
    And I yelled to the cabby "Yo, homes smell you later!"
    Looked at my kingdom I was finally there
    To sit on my throne as the prince of Bel-air

        </p>
      </div>
    </div>
  </div>
  <button
    className="c3"
    disabled={undefined}
    href={undefined}
    onClick={[Function]}
    target={undefined}
    title="open FoldOut"
    type="button"
  >
    Toggle
  </button>
</div>
`;

exports[`Storyshots Heading With a hierarchy 1`] = `
.c0 {
  color: #333740;
  font-family: Melbourne,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<h1
  className="c0"
  role="heading"
>
  This is an h
  1
   element.
</h1>
`;

exports[`Storyshots Heading default 1`] = `
.c0 {
  color: #333740;
  font-family: Melbourne,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<div
  className="c0"
  role="heading"
>
  This is a div element.
</div>
`;

exports[`Storyshots Icon Large icon 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  height: 60px;
  width: 60px;
}

.c0 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

<span
  aria-hidden={true}
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "test-file-stub",
    }
  }
  role="img"
/>
`;

exports[`Storyshots Icon Small icon 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c0 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

<span
  aria-hidden={true}
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "test-file-stub",
    }
  }
  role="img"
/>
`;

exports[`Storyshots Icon With overwritten fill 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  height: 60px;
  width: 60px;
}

.c0 svg {
  max-height: 100%;
  max-width: 100%;
  fill: BlueViolet;
}

<span
  aria-hidden={true}
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "test-file-stub",
    }
  }
  role="img"
/>
`;

exports[`Storyshots Icon With some text 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c0 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 60px;
  width: 60px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c1 {
  margin: 12px 0px 0px 0px;
}

<div>
  <span
    aria-hidden={true}
    className="c0"
    dangerouslySetInnerHTML={
      Object {
        "__html": "test-file-stub",
      }
    }
    role="img"
  />
  <span>
     With some text
  </span>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
    <span>
       With some other text
    </span>
  </div>
</div>
`;

exports[`Storyshots Notification Error 1`] = `
.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c1 {
  margin: 12px 12px 12px 12px;
}

.c0 {
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  border-width: 1px;
  border-style: solid;
  background: #ffbdce;
  border-color: #ff6c93;
  color: #c81746;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
       
    Oops, something wen't wrong. Please try again.
  </div>
</div>
`;

exports[`Storyshots Notification Info 1`] = `
.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c1 {
  margin: 12px 12px 12px 12px;
}

.c0 {
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  border-width: 1px;
  border-style: solid;
  background: #dde7f2;
  border-color: #c8d2dd;
  color: #4e82bb;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
       
    Oops, something wen't wrong. Please try again.
  </div>
</div>
`;

exports[`Storyshots Notification Success 1`] = `
.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c1 {
  margin: 12px 12px 12px 12px;
}

.c0 {
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  border-width: 1px;
  border-style: solid;
  background: #d2f5d6;
  border-color: #6bde78;
  color: #31953d;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
       
    Wow, Great job!
  </div>
</div>
`;

exports[`Storyshots Notification Warning 1`] = `
.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c1 {
  margin: 12px 12px 12px 12px;
}

.c0 {
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  border-width: 1px;
  border-style: solid;
  background: #fff0be;
  border-color: #ffce28;
  color: #bb8d0a;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
       
    Careful, this might go wrong.
  </div>
</div>
`;

exports[`Storyshots Notification With a custom icon 1`] = `
.c2 {
  display: inline-block;
  vertical-align: middle;
  height: 18px;
  width: 18px;
}

.c2 svg {
  max-height: 100%;
  max-width: 100%;
  fill: currentColor;
}

.c1 {
  margin: 12px 12px 12px 12px;
}

.c0 {
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  border-width: 1px;
  border-style: solid;
  background: #fff0be;
  border-color: #ffce28;
  color: #bb8d0a;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      aria-hidden={true}
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
       
    Meh, I am not impressed.
  </div>
</div>
`;

exports[`Storyshots Spacer With margin 1`] = `
.c2 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c0 {
  margin: 12px 12px 12px 12px;
}

.c1 {
  border: solid 3px rgba(255,36,94,0.3);
  border-radius: 5px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      This has a margin.
    </p>
  </div>
</div>
`;

exports[`Storyshots Spacer With padding 1`] = `
.c2 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c1 {
  padding: 12px 12px 12px 12px;
}

.c0 {
  border: solid 3px rgba(255,36,94,0.3);
  border-radius: 5px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      This has padding.
    </p>
  </div>
</div>
`;

exports[`Storyshots Spacer Without props 1`] = `
.c2 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

.c0 {
  margin: 0px 0px 0px 0px;
}

.c1 {
  border: solid 3px rgba(255,36,94,0.3);
  border-radius: 5px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      This has no spacing.
    </p>
  </div>
</div>
`;

exports[`Storyshots SubHeading With a hierarchy 1`] = `
.c0 {
  color: #88979d;
  font-family: Source Sans Pro,sans-serif;
  font-size: 18px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<h2
  className="c0"
  role="heading"
>
  This is an h
  2
   element.
</h2>
`;

exports[`Storyshots SubHeading default 1`] = `
.c0 {
  color: #88979d;
  font-family: Source Sans Pro,sans-serif;
  font-size: 18px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<div
  className="c0"
  role="heading"
>
  This is a div element.
</div>
`;

exports[`Storyshots Text default 1`] = `
.c0 {
  color: #333740;
  font-family: Source Sans Pro,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
}

<p
  className="c0"
>
  
    Now this is the story all about how
    My life got flipped, turned upside down
    And I'd like to take a minute just sit right there
    I'll tell you how I became the prince of a town called Bel-air

    In west Philadelphia born and raised
    On the playground where I spent most of my days
    Chilling out, maxing, relaxing all cool
    And all shooting some b-ball outside of the school
    When a couple of guys, they were up to no good
    Started making trouble in my neighbourhood
    I got in one little fight and my mom got scared
    And said "You're moving with your auntie and uncle in Bel-air"

    I whistled for a cab and when it came near the
    License plate said "fresh" and had a dice in the mirror
    If anything I could say that this cab was rare
    But I thought nah, forget it, yo homes to Bel-air!

    I pulled up to a house about seven or eight
    And I yelled to the cabby "Yo, homes smell you later!"
    Looked at my kingdom I was finally there
    To sit on my throne as the prince of Bel-air

</p>
`;
